[package]
name = "blaze"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33.2"        
kira = { version = "0.9", features = ["cpal"] }
cpal = "0.15.2"  
symphonia = { version = "0.5.5", features = ["all"] }
lofty = "0.22.4"
image = "0.25.9"
walkdir = "2.5.0"
dirs-next = "2.0.0"
poll-promise = "0.3.0"
zbus = "5.12.0"
notify-rust = "4.11.7"